Added new image

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     align-items: center;
     box-shadow: inset 30px;
 }
-.img3{
+.img{
     width: 200px;
     height: 200px;
     justify-content: space-between;
