--- a/style.css
+++ b/style.css
@@ -3,17 +3,16 @@ body{
     margin: 0;
     background-color: chocolate;
 }
-
-.div_menu img {
+.div_sweet{
     display: flex;
     justify-content: center;
+    
+
 }
-p{
-    display: flex;
-    color: hsl(0, 21%, 73%);
-    align-items: center;
-}
-div{
-    display: flex;
-    justify-content: space-between;
-}
+
+
+    
+    
+
+
+
