--- a/style.css
+++ b/style.css
@@ -10,3 +10,9 @@
     height: 40px;
     width: 40px;
 }
+.btn{
+    font-size: 20px;
+    background-color: blue;
+    padding-left: 20px;
+    padding-right: 20px;
+}
